--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm ci
           
       - name: Build Storybook
-        run: npm run storybook:build
+        run: npm run build
           
       - name: Deploy Storybook
         if: steps.cpv.outputs.is-new-version == 'true'
