--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,5 @@ jobs:
           folder: ./storybook-static
           branch: gh-pages
           clean: true
-          clean-exclude: pr:**/*
+          clean-exclude: pr:**/*, 
+                         .nojekyll
