refactor: unneeded code removed

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "storybook build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "start": "storybook dev -p 6006"
   },
   "dependencies": {
     "react": "^18.2.0",
