--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "storybook dev -p 6006"
   },
   "dependencies": {
+    "@storybook/addon-a11y": "^7.0.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
