--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Check package version
         id: cpv
-        uses: PostHog/check-package-version@v2
+        uses: PostHog/check-package-version@v3
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -30,11 +30,15 @@ jobs:
       - name: Build Storybook
         run: npm run build
           
+      - name: Modify Permissions-Policy header
+        run: |
+          echo "permissions-policy: interest-cohort=()" >> $GITHUB_WORKSPACE/storybook-static/CNAME
+
       - name: Deploy Storybook
         uses: JamesIves/github-pages-deploy-action@v4
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           folder: ./storybook-static
-          jekyll: false
           branch: gh-pages
           clean: true
           clean-exclude: pr:**/*
