fie Preview error

--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@storybook/addon-a11y": "^7.0.24",
+    "@storybook/addon-a11y": "^7.2.0-rc.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.24",
-    "@storybook/addon-interactions": "^7.0.24",
-    "@storybook/addon-links": "^7.0.24",
-    "@storybook/blocks": "^7.0.24",
-    "@storybook/builder-vite": "^7.0.24",
-    "@storybook/react": "^7.0.24",
-    "@storybook/react-vite": "^7.0.24",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/addon-essentials": "^7.2.0-rc.0",
+    "@storybook/addon-interactions": "^7.2.0-rc.0",
+    "@storybook/addon-links": "^7.2.0-rc.0",
+    "@storybook/addon-mdx-gfm": "^7.2.0-rc.0",
+    "@storybook/blocks": "^7.2.0-rc.0",
+    "@storybook/react": "^7.2.0-rc.0",
+    "@storybook/react-vite": "^7.2.0-rc.0",
+    "@storybook/testing-library": "^0.2.1-next.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -30,9 +30,9 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "eslint-plugin-storybook": "^0.6.12",
+    "eslint-plugin-storybook": "^0.6.13",
     "prop-types": "^15.8.1",
-    "storybook": "^7.0.24",
+    "storybook": "^7.2.0-rc.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   },
